# pygbm

./: requirements.txt  setup.cfg  setup.py  tox.ini
benchmarks/: bench_higgs_boson.py  bench_histogram.py
pygbm/: __init__.py  abc.py  dataset.py  gradient_boosting.py  grower.py  loss.py  option_set.py  options.py  utils.py
pygbm/linear_edge/: splitting_v2.py
pygbm/plain/: grower.py  splitting.py
pygbm/pwl/: grower.py  histogram.py  predictor.py  splitting.py
tests/: test_grower.py  test_histogram.py  test_predictor.py
tests/integration/: test_gradient_boosting.py  test_plotting.py
tests/unit/: test_loss.py
tests/unit/plain/: test_predictor.py  test_splitting.py
