[aliases]
test = pytest

[coverage:report]
exclude_lines =
    @abc.abstractmethod
    @abc.abstractproperty
    CancelledError
    NotImplementedError
    pragma: no cover
    __repr__
    __str__
fail_under = 20
precision = 2
show_missing = True

[coverage:run]
branch = True
source =
    src
    tests

[flake8]
ignore = E203,W503
max-line-length = 88

[isort]
atomic = true
default_section = THIRDPARTY
force_grid_wrap = 0
include_trailing_comma = true
indent = '    '
known_first_party = recommender_dags
known_third_party =
line_length = 88
lines_after_imports = 2
multi_line_output = 3
not_skip = __init__.py
order_by_type = true
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
use_parentheses = True

[metadata]
author = Alexey Gurianov
author_email = guryanov93@gmail.com
description = Gradient Boosting Kit Library
long_description = file: README.md
name = recommender-dags
url = https://gitlab.rambler.ru/um/recommender
version =

[mypy]
check_untyped_defs = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[options]
include_package_data = True
install_requires =
    numpy==0.17.0
    scipy==1.2.0
    scikit-learn==0.21.3
    numba==0.45.0
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.extras_require]
develop =
    black==18.9b0
    coverage==4.5.3
    flake8==3.7.8
    isort==4.3.21
    mypy==0.720
    pylint==2.3.1
    pytest==5.0.1

[options.packages.find]
where = src

[tool:cookiecutter_context]
_template = new-python-project
coverage_fail_under = 20
metadata_author = Alexey Gurianov
metadata_author_email = guryanov93@gmail.com
metadata_description = Gradient Boosting Kit Library
metadata_long_description = file: README.md
metadata_name = gbk
metadata_url = https://gitlab.rambler.ru/um/recommender
project_dest = gbk
project_monorepo_name = gradient_boosting_kit
python_package = gbk

[tool:pytest]
addopts =
    --junitxml=junit.xml
    --showlocals
    --verbose
testpaths =
    tests/unit/
    tests/integration/
